update robots, favicon, and stylesheet.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-CA">
 <head>
+	<meta name="robots" content="index, follow"/>
+	<link rel="stylesheet" type="text/css" href="/style.css"/>
+	<link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACwAAAAAAQABAAACAkQBADs="/>
 	<title>Drowning Polar Bears</title>
 </head>
-<body style="background-color:white">
-<div style="text-align:center">
+<body>
+<div>
 	<a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"><img
-			src="polarbear1.jpg" alt="Drowning Polar Bears" style="border:none"></a>
+			src="polarbear1.jpg" alt="Drowning Polar Bears"></a>
 </div>
 </body>
 </html>
