added counter, just to see.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 	<a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"><img
 			src="polarbear1.jpg" alt="Drowning Polar Bears"></a>
 </div>
+<div id="counter">
+	<img src="https://ranch.org/counter" alt="counter">
+</div>
 </body>
 </html>
